tests/ui/const-generics/mgca/type_const-only-in-trait.stderr
error: implementation of a `type const` must also be marked as `type const`
  --> $DIR/type_const-only-in-trait.rs:11:5
   |
LL |     const NUM: usize = 42;
   |     ^^^^^^^^^^^^^^^^
   |
note: trait declaration of const is marked as `type const`
  --> $DIR/type_const-only-in-trait.rs:5:5
   |
LL |     type const NUM: usize;
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

